--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Nuevo parque de Universal: Epic Universe</title>  
+  <img src="epic_universe.jpeg" alt="epic universe">
+</head>
 <body>
-  <h1>Hello World!</h1>
+  <h1>¡Descubre las atracciones y nuevos restaurantes!</h1>
+  <p>El nuevo Parque Universal es una experiencia inmersiva y única, repleta de magia y adrenalina. Cuenta con más de 6 áreas temáticas principales, cada una inspirada en franquicias famosas del cine y la televisión. En total, el parque ofrece:</p>
+  <ul>
+    <li>Más de 20 atracciones, desde montañas rusas extremas hasta simuladores y recorridos interactivos.</li>
+    <li>Más de 15 restaurantes temáticos, con menús ambientados en tus películas favoritas.</li>
+    <li>Espectáculos en vivo y desfiles que se realizan durante todo el día.</li>
+    <li>Tiendas exclusivas donde podés conseguir merchandising oficial.</li>
+  </ul>
+  <h2>Las 5 áreas temáticas:</h2>
+  <ul>
+    <li>The Wizarding World of Harry Potter – Ministry of Magic – Reviví el ministerio de magia.</li>
+    <img src="harry_potter.jpeg" alt="ministerio de magia">
+    <li>Celestial Park – El corazón del parque, con jardines brillantes, fuentes interactivas y juegos familiares.</li>
+    <img src="celestial_park.avif" alt="celestial park">
+    <li>Super Nintendo World – Saltá con Mario, luchá con Bowser y recorré mundos pixelados.</li>
+    <img src="nintendo_world.avif" alt="nintendo">
+    <li>How to Train Your Dragon – Isle of Berk – Volá junto a dragones y explorá la aldea vikinga.</li>
+    <img src="train_your_dragon.jpg" alt="entrenando a tu dragon">
+    <li>Dark Universe – Inspirado en los monstruos clásicos de Universal como Frankenstein y el Hombre Lobo..</li>
+    <img src="dark_universe.jpeg" alt="dark universe">
+  </ul>
 </body>
+
 </html>
