--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <img src="epic_universe.jpeg" alt="epic universe">
 </head>
 <body>
-  <h1>¡Descubre las atracciones y nuevos restaurantes!</h1>
+  <h1>¡Descubre las atracciones!</h1>
   <p>El nuevo Parque Universal es una experiencia inmersiva y única, repleta de magia y adrenalina. Cuenta con más de 6 áreas temáticas principales, cada una inspirada en franquicias famosas del cine y la televisión. En total, el parque ofrece:</p>
   <ul>
     <li>Más de 20 atracciones, desde montañas rusas extremas hasta simuladores y recorridos interactivos.</li>
