--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Nuevo parque de Universal: Epic Universe</title>  
-  <img src="epic_universe.jpeg" alt="epic universe">
+  <img/ src="epic_universe.jpeg" alt="epic universe">
 </head>
 <body>
   <h1>¡Descubre las atracciones!</h1>
@@ -16,15 +16,15 @@
   <h2>Las 5 áreas temáticas:</h2>
   <ul>
     <li>The Wizarding World of Harry Potter – Ministry of Magic – Reviví el ministerio de magia.</li>
-    <img src="harry_potter.jpeg" alt="ministerio de magia">
+    <img/ src="harry_potter.jpeg" alt="ministerio de magia">
     <li>Celestial Park – El corazón del parque, con jardines brillantes, fuentes interactivas y juegos familiares.</li>
-    <img src="celestial_park.avif" alt="celestial park">
+    <img/ src="celestial_park.avif" alt="celestial park">
     <li>Super Nintendo World – Saltá con Mario, luchá con Bowser y recorré mundos pixelados.</li>
-    <img src="nintendo_world.avif" alt="nintendo">
+    <img/ src="nintendo_world.avif" alt="nintendo">
     <li>How to Train Your Dragon – Isle of Berk – Volá junto a dragones y explorá la aldea vikinga.</li>
-    <img src="train_your_dragon.jpg" alt="entrenando a tu dragon">
+    <img/ src="train_your_dragon.jpg" alt="entrenando a tu dragon">
     <li>Dark Universe – Inspirado en los monstruos clásicos de Universal como Frankenstein y el Hombre Lobo..</li>
-    <img src="dark_universe.jpeg" alt="dark universe">
+    <img/ src="dark_universe.jpeg" alt="dark universe">
   </ul>
 </body>
 
