--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <h1>¡Descubre las atracciones!</h1>
   <p>El nuevo Parque Universal es una experiencia inmersiva y única, repleta de magia y adrenalina. Cuenta con más de 6 áreas temáticas principales, cada una inspirada en franquicias famosas del cine y la televisión. En total, el parque ofrece:</p>
   <ul>
-    <li>Más de 20 atracciones, desde montañas rusas extremas hasta simuladores y recorridos interactivos.</li>
-    <li>Más de 15 restaurantes temáticos, con menús ambientados en tus películas favoritas.</li>
-    <li>Espectáculos en vivo y desfiles que se realizan durante todo el día.</li>
-    <li>Tiendas exclusivas donde podés conseguir merchandising oficial.</li>
+    <li>🎢 Más de 20 atracciones, desde montañas rusas extremas hasta simuladores y recorridos interactivos.</li>
+    <li>🍔 Más de 15 restaurantes temáticos, con menús ambientados en tus películas favoritas.</li>
+    <li>🎭Espectáculos en vivo y desfiles que se realizan durante todo el día.</li>
+    <li>🛍️Tiendas exclusivas donde podés conseguir merchandising oficial.</li>
   </ul>
   <h2>Las 5 áreas temáticas:</h2>
   <ul>
@@ -27,5 +27,65 @@
     <img src="img/dark_universe.jpeg" alt="dark universe">
   </ul>
 </body>
+<style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom, #e6f0ff, #ffffff);
+      color: #333;
+      max-width: 1000px;
+      margin: auto;
+      padding: 30px;
+      line-height: 1.6;
+    }
 
+    h1 {
+      text-align: center;
+      color: #003366;
+      font-size: 38px;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      color: #004a99;
+      font-size: 28px;
+      margin-top: 40px;
+      margin-bottom: 15px;
+    }
+
+    p {
+      font-size: 18px;
+      margin-bottom: 20px;
+      text-align: justify;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    ul li {
+      background-color: #ffffff;
+      margin-bottom: 30px;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .hero {
+      width: 100%;
+      border-radius: 12px;
+      margin-bottom: 30px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    .attraction-img {
+      display: block;
+      width: 100%;
+      max-width: 600px;
+      height: 300px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+  </style>
 </html>
