--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h2>Las 5 áreas temáticas:</h2>
      <div class="grid">
     <div class="card">
-      <img src="img/harry_potter.jpeg" alt="ministerio de magia">
+      <img src="img/harry_potter.jpg" alt="ministerio de magia">
       <div class="card-content">
         <strong>The Wizarding World of Harry Potter</strong>
         <p>Reviví el Ministerio de Magia.</p>
