--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom, #e6f0ff, #ffffff);
+      background: linear-gradient(to bottom, #d1f2eb, #ffffff);
       color: #333;
       max-width: 1000px;
       margin: auto;
